--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-        run: npm install -g yarn
-        run: yarn install --frozen-lockfile
-        run: yarn build
+      - run: npm install -g yarn
+      - run: yarn install --frozen-lockfile
+      - run: yarn build
       - name: RSync Deployment
         uses: burnett01/rsync-deployments@4.1
         with:
