--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,22 @@ jobs:
       - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build
-      - name: RSync Deployment
-        uses: burnett01/rsync-deployments@4.1
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          switches: -avzr --delete --exclude="" --include="" --filter=""
-          path: ./
-          remote_path: /var/www/lenaebner/
-          remote_host: ${{ secrets.DEPLOY_HOST }}
-          remote_port: ${{ secrets.DEPLOY_PORT }}
-          remote_user: ${{ secrets.DEPLOY_USER }}
-          remote_key: ${{ secrets.DEPLOY_KEY }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
+#       - name: RSync Deployment
+      - name: Deploy with rsync
+        run: rsync -avz ./dist/ ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:/var/www/lenaebner/
+#         uses: burnett01/rsync-deployments@4.1
+#         with:
+#           switches: -avzr --delete --exclude="" --include="" --filter=""
+#           path: ./
+#           remote_path: /var/www/lenaebner.com/
+#           remote_host: ${{ secrets.DEPLOY_HOST }}
+#           remote_port: ${{ secrets.DEPLOY_PORT }}
+#           remote_user: ${{ secrets.DEPLOY_USER }}
+#           remote_key: ${{ secrets.DEPLOY_KEY }}
