--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-photoswipe-gallery": "^1.3.6",
     "remark": "^13.0.0",
     "remark-html": "^13.0.2",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
