--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
-    "date-fns": "^2.24.0",
-    "framer-motion": "^4.1.17",
+    "date-fns": "^2.28.0",
+    "framer-motion": "^6.3.16",
     "gray-matter": "^4.0.3",
-    "moment": "^2.29.1",
-    "next": "^11.0.0",
-    "photoswipe": "^4.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "react-photoswipe-gallery": "^1.3.6",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.2",
-    "sass": "^1.42.1",
-    "sharp": "^0.29.1"
+    "moment": "^2.29.3",
+    "next": "^12.2.0",
+    "photoswipe": "^5.2.8",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-icons": "^4.4.0",
+    "react-photoswipe-gallery": "^2.2.1",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "sass": "^1.53.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.0",
-    "prettier": "2.4.1"
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
+    "prettier": "2.7.1"
   }
 }
